--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 <div class="review-text">Fantastic app with great features. Easy to use and very helpful.</div>
             </div>
             <div class="review">
-                <div class="review-author">Yadav Bhai</div>
-                <div class="review-text">I love this app! It's the best one I've downloaded in a while.</div>
+                <div class="review-author">Munna Bhai</div>
+                <div class="review-text">यह ऐप अद्भुत है! इसने मेरी जिंदगी पूरी तरह से बदल दी है.</div>
             </div>
         </div>
     </div>
