--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Awesome App - Google Play Store</title>
+    <title>Download APK</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
             margin: 0;
             padding: 0;
+            background: #f5f5f5;
+            background-image: url('https://www.gstatic.com/android/market_images/web/play_prism_halo/page_background_gradient.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
         }
         .container {
-            width: 90%;
+            width: 100%;
             max-width: 1200px;
             margin: 20px auto;
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -61,41 +64,17 @@
         }
         .screenshots {
             margin-bottom: 20px;
-            position: relative;
-            width: 100%;
             overflow: hidden;
         }
-        .screenshots h3 {
-            margin-bottom: 10px;
-        }
-        .screenshots-wrapper {
+        .screenshots-inner {
             display: flex;
-            transition: transform 0.3s ease-in-out;
+            transition: transform 0.5s ease-in-out;
         }
-        .screenshots img {
-            width: 200px;
-            height: auto;
+        .screenshot {
+            flex: 0 0 auto;
             margin-right: 10px;
-            border: 1px solid #ddd;
             border-radius: 5px;
-            flex-shrink: 0;
-        }
-        .screenshots-navigation {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            pointer-events: none;
-        }
-        .screenshots-navigation button {
-            background: rgba(0, 0, 0, 0.5);
-            border: none;
-            color: white;
-            padding: 10px;
-            cursor: pointer;
-            pointer-events: all;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
         }
         .reviews {
             margin-top: 40px;
@@ -130,61 +109,50 @@
         </div>
 
         <div class="screenshots">
-            <h3>Screenshots</h3>
-            <div class="screenshots-wrapper" id="screenshots-wrapper">
-                <img src="screenshot1.png" alt="Screenshot 1">
-                <img src="screenshot2.png" alt="Screenshot 2">
-                <img src="screenshot3.png" alt="Screenshot 3">
-            </div>
-            <div class="screenshots-navigation">
-                <button id="prev-button">&#10094;</button>
-                <button id="next-button">&#10095;</button>
+            <div class="screenshots-inner">
+                <img src="screenshot1.png" alt="Screenshot 1" class="screenshot">
+                <img src="screenshot2.png" alt="Screenshot 2" class="screenshot">
+                <img src="screenshot3.png" alt="Screenshot 3" class="screenshot">
             </div>
         </div>
 
         <div class="reviews">
             <h3>Reviews</h3>
             <div class="review">
-                <div class="review-author">Deepak Kumar</div>
+                <div class="review-author">John Doe</div>
                 <div class="review-text">This app is amazing! It has completely changed my life.</div>
             </div>
             <div class="review">
-                <div class="review-author">Rahul</div>
+                <div class="review-author">Jane Smith</div>
                 <div class="review-text">A must-have app for everyone. Highly recommended!</div>
             </div>
             <div class="review">
-                <div class="review-author">Yadav Kumar</div>
+                <div class="review-author">Robert Brown</div>
                 <div class="review-text">Fantastic app with great features. Easy to use and very helpful.</div>
             </div>
             <div class="review">
-                <div class="review-author">Munna Bhai</div>
-                <div class="review-text">यह ऐप अद्भुत है! इसने मेरी जिंदगी पूरी तरह से बदल दी है.</div>
+                <div class="review-author">Emily Johnson</div>
+                <div class="review-text">I love this app! It's the best one I've downloaded in a while.</div>
             </div>
         </div>
     </div>
 
     <script>
-        const wrapper = document.getElementById('screenshots-wrapper');
-        const nextButton = document.getElementById('next-button');
-        const prevButton = document.getElementById('prev-button');
-        let currentIndex = 0;
+        const screenshotsInner = document.querySelector('.screenshots-inner');
+        const screenshots = document.querySelectorAll('.screenshot');
+        let counter = 0;
+        const width = screenshots[0].clientWidth;
 
-        nextButton.addEventListener('click', () => {
-            const totalImages = wrapper.children.length;
-            currentIndex = (currentIndex + 1) % totalImages;
-            updateCarousel();
+        document.querySelector('.container').addEventListener('click', function(event) {
+            if (event.target.matches('.screenshots-inner')) {
+                counter++;
+                screenshotsInner.style.transform = `translateX(-${width * counter}px)`;
+
+                if (counter === screenshots.length - 1) {
+                    screenshotsInner.style.transition = 'transform 0.5s ease-in-out';
+                }
+            }
         });
-
-        prevButton.addEventListener('click', () => {
-            const totalImages = wrapper.children.length;
-            currentIndex = (currentIndex - 1 + totalImages) % totalImages;
-            updateCarousel();
-        });
-
-        function updateCarousel() {
-            const offset = -currentIndex * 210; // 200px image width + 10px margin
-            wrapper.style.transform = `translateX(${offset}px)`;
-        }
     </script>
 
 </body>
